<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/reg_layout"
    android:layout_height="match_parent"
    android:background="@drawable/india"
    tools:context="com.siaans.skillindia.Reg_Activity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/curvebtn"
        android:text="TRAINEE REGISTRATION"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:padding="8dp"
        android:layout_below="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnLinkToRegisterScreen"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/im_profile"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:contentDescription="user_profile_picture"
                app:srcCompat="@drawable/prf_img"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/First_namelayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/First_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/view"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/first"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="First Name"
                    android:inputType="textPersonName"
                    android:padding="1.5dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_background"
                    android:textColorHint="@color/dark_background"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_alignParentStart="true"
                android:background="@color/black" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/last"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="12dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/last"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Last Name"
                    android:inputType="textPersonName"
                    android:padding="1.5dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_background"
                    android:textColorHint="@color/dark_background"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_centerHorizontal="true"
                android:background="@color/black" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobilelayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/mobile_no"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/mobile"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/mobileNumber"
                    android:padding="1.5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_alignParentStart="true"
                android:background="@color/black" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emaillayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/view2"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:padding="1.5dp"
                    android:textColor="@color/dark_background"
                    android:textColorHint="@color/dark_background"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/gender"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="Gender"
                    android:textColor="@color/black" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:textColor="@color/black"
                        android:shadowColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Other"
                        android:textColor="@color/black" />
                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwodlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/other"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="1.5dp"
                    android:textColor="@color/dark_background"
                    android:textColorHint="@color/dark_background"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/black" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmpasswordlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/password"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:padding="1.5dp"
                    android:textColor="@color/dark_background"
                    android:textColorHint="@color/dark_background"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/black" />



            <Button
                android:id="@+id/Reg"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="19dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/curvebtn"
                android:text="Next" />
        </LinearLayout> </ScrollView>

</RelativeLayout>